Added preliminar class structure and correct settings implementation

--- a/AlumniAppCore/appsettings.json
+++ b/AlumniAppCore/appsettings.json
@@ -4,5 +4,10 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+
+  "ExportOptions": {
+    "ExportTXT" :  "true",
+    "ExportWord" :  "false"
+  }
 }
