--- a/AlumniAppCore/AlumniAppCore.csproj
+++ b/AlumniAppCore/AlumniAppCore.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.App" />
+    <PackageReference Include="Microsoft.Extensions.Configuration" Version="2.1.1" />
   </ItemGroup>
 
   <ItemGroup>
@@ -17,5 +18,10 @@
   <ItemGroup>
     <Compile Remove="Models\Middleware.cs" />
     <Compile Remove="Models\EmptyClass.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <Reference Include="Alumni.App.Db">
+      <HintPath>lib\Alumni.App.Db.dll</HintPath>
+    </Reference>
   </ItemGroup>
 </Project>
