Refactored UserCreator to handle login, refactored displayof availiable features and feature creation

--- a/AlumniAppCore/AlumniAppCore.csproj
+++ b/AlumniAppCore/AlumniAppCore.csproj
@@ -24,4 +24,9 @@
       <HintPath>lib\Alumni.App.Db.dll</HintPath>
     </Reference>
   </ItemGroup>
+  <ItemGroup>
+    <None Remove="Views\Home\ErrorView.cshtml" />
+    <None Remove="Views\Home\Messages.css" />
+    <None Remove="Views\Home\Messages.css" />
+  </ItemGroup>
 </Project>
