--- a/AlumniAppCore/AlumniAppCore.csproj
+++ b/AlumniAppCore/AlumniAppCore.csproj
@@ -8,6 +8,8 @@
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="2.1.1" />
     <PackageReference Include="Microsoft.AspNetCore.Session" Version="2.1.1" />
+    <PackageReference Include="DocumentFormat.OpenXml" Version="2.8.1" />
+    <PackageReference Include="GemBox.Document" Version="29.0.0.1064" />
   </ItemGroup>
 
   <ItemGroup>
