Rearranged files and folders, for an easier to understant project structure. Tested and it had no apparent flaws!

--- a/AlumniAppCore/AlumniAppCore.csproj
+++ b/AlumniAppCore/AlumniAppCore.csproj
@@ -30,6 +30,11 @@
     <Compile Remove="Controllers\CookieManager.cs" />
     <Compile Remove="Models\WordExporter.cs" />
     <Compile Remove="Models\TXTExporter.cs" />
+    <Compile Remove="Models\User.cs" />
+    <Compile Remove="Models\Teacher.cs" />
+    <Compile Remove="Models\Supervisor.cs" />
+    <Compile Remove="Models\UserCreator.cs" />
+    <Compile Remove="Models\UserLogIn.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="Alumni.App.Db">
